testsuite/tests/properties/privacy/test.out
== priv_priv.lkt ==
Code generation was successful

== test.py ==
  AbstractNode.prop: private
  ConcreteNode.prop: private


== priv_pub.lkt ==
priv_pub.lkt:9:13: error: AbstractNode.prop is private, so should be ConcreteNode.prop
9 |     @export fun prop(): Bool = true
  |             ^^^^^^^^^^^^^^^^^^^^^^^


== test.py ==
Compilation failed


== pub_priv.lkt ==
Code generation was successful

== test.py ==
  AbstractNode.prop: public
  ConcreteNode.prop: public


== pub_pub.lkt ==
Code generation was successful

== test.py ==
  AbstractNode.prop: public
  ConcreteNode.prop: public


lkt_compile: Done
